<resources>
    <string name="app_name">Media Center</string>
    <string name="sd">SD:</string>
    <string name="usb_device">USB Device:</string>
    <string name="nfs_device">NFS Device:</string>
    <string name="nfs">NFS</string>
    <string name="samba">Samba</string>
    <string name="add_nfs">Add NFS device</string>
    <string name="add_smb">Add SMB device</string>
    <string name="refresh_network_device">Refresh network device</string>
    <string name="refresh_all_devices">Refresh all devices</string>
    <string name="smb_device">SMB Device:</string>
    <string name="dlna_device">NetWork Device:</string>
    <string name="unknown_device">unknown device:</string>
    <string name="no_usb_hint_before">No USB or DLNA device is found.</string>
    <string name="no_usb_hint_after">Connect a USB device.</string>
    <string name="title_activity_file_list">FileListActivity</string>
    <string name="title_activity_audio_player">AudioPlayerActivity</string>
    <string name="title_activity_video_player">VideoPlayerActivity</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_title">Unknown Title</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
	<string name="menu_refresh">Refresh</string>
	<string name="VideoView_error_title">Sorry, can not play this video.</string>
    <string name="used_space_tip">Used:&#160;</string>
    <string name="total_space_tip">Total:&#160;</string>
    <string name="free_space_tip">Available Space:&#160;</string>
    <string name="folder_no_data">The folder is empty.</string>
    <string name="file_tip">Files:&#160;</string>
    <string name="image_size_tip">Resolution:&#160;</string>
    <string name="modify_time_tip">Modified Time:&#160;</string>
    <string name="media_file_size_tip">Media File Size:&#160;</string>
    <string name="video_file_tip">Files:&#160;</string>
    <string name="video_folder_size">Size:&#160;</string>
    <string name="error_dowload_image">Failed to download the image. Check the network</string>
    <string name="image_unit">Photos</string>
    <string name="video_unit">videos</string>
    <string name="audio_unit">Tracks</string>
    <string name="audio_unitTrack">Track</string>
    <string name="all_image">All Photos</string>
    <string name="according_iamge_name">By Album</string>
    <string name="according_date">By Date</string>
    <string name="according_dir">By Folder</string>
    <string name="according_artist">By Artist</string>
    <string name="according_album">By Album</string>
    <string name="according_all_video">All Videos</string>
    <string name="according_all_audio">All Music</string>
    <string name="according_favorite">Accord Favorite</string>
    <string name="all_media_file">All Files</string>
    <string name="audio_title_name">Name</string>
    <string name="audio_title_artist_name">Artist</string>
    <string name="audio_title_album_name">Album</string>
    <string name="menu_btn_search_name">Search</string>
    <string name="search_tips">Please enter the search keyword</string>
    <string name="menu_delete_fail">Delete fail</string>
    <string name="menu_delete_success">Delete success</string>
    <string name="menu_please_press">Press </string>
    <string name="menu_please_press_2">to change the browsing mode</string>
    <string name="view_mode">View Mode</string>
    <string name="order_by_time">Order by time</string>
    <string name="order_by_character">Order by character</string>
    <string name="order_by_folder">Folder</string>
    <string name="order_by_photo_album">Photo Album</string>
    <string name="order_by_album">Album</string>
    <string name="order_by_artist">Artist</string>
    <string name="change_view_mode">Change view mode</string>
    <string name="delete_all_files">Delete all</string>
    <string name="delete_file">Delete</string>
    <string name="delete_all_message">Are you sure you want to delete all the files and folders from the current directory?</string>
    <string name="delete_selected_message">Are you sure you want to delete the selected files and folders?</string>
    <string name="delete_cancel">Cancel</string>
    <string name="delete_mode_tip">Delete Image</string>
    <string name="delete_mode_note1">to exit the deletion mode</string>
    <string name="delete_mode_note2">to select the deletion mode</string>
    <string name="unit_disk_size_b">B</string>
    <string name="unit_disk_size_kb">K</string>
    <string name="unit_disk_size_mb">M</string>
    <string name="unit_disk_size_gb">G</string>
    <string name="unit_disk_size_tb">T</string>
    <string name="real_unknown">Unknown</string>
    <string name="date_today_string">Today\u0020</string>
    <string name="date_yesterday_string">Yesterday\u0020</string>
    <string name="date_year_string">Year</string>
    <string name="date_month_string">Month</string>
    <string name="date_day_string">Day\u0020</string>
    <string name="video_app_name">Video Player</string>
    <string name="file_size_tip">File Size:&#160;</string>
    <string name="play_mode_audio">Play Mode</string>
    <string name="background_pics">Image</string>
    <string name="can_not_play_image">The image cannot be displayed.</string>
    <string name="play_mode_sequence_play">Sequential Play</string>
    <string name="play_mode_single_play">Repeat Current</string>
    <string name="play_mode_random_play">Random Play</string>
    <string name="play_mode_loop_play">Loop Play</string>
    <string name="default_remaining_duration">00:00:00</string>
    <string name="slant">/</string>
    <string name="no_lyric">Lyrics unavailable.</string>
    <string name="reach_last_item">This is the last song.</string>
    <string name="audio_cannot_paly">Failed to play the song.</string>
    <string name="close">Close</string>
    <string name="open_album">Turn On</string>
    <string name="no_image">No image files on this device</string>
    <string name="no_music">No music files on this device</string>
    <string name="no_video">No video files on this device</string>
    <string name="no_file">No files on this device</string>
    <string name="newline">\n</string>
    <string name="select_bg_image">Select Background Image</string>
    <string name="video_program_completion">Playback ends.</string>
    <string name="video_error">Failed to play the video.</string>
    <string name="video_cannot_pre">This is the first video.</string>
    <string name="video_cannot_next">This is the last video.</string>
    <string name="video_seekbar_duration_init">00:00:00</string>
    <string name="video_menu_playmode">Continuous Play</string>
    <string name="video_menu_subtitle">Subtitle</string>
    <string name="video_hint_play_loop">Sequential Play</string>
    <string name="video_hint_play_single">Repeat Off</string>
    <string name="video_hint_loop_open">On</string>
    <string name="video_hint_loop_close">Off</string>
    <string name="video_hint_subtitle_state_close">Close</string>
    <string name="video_hint_subtitle_id">Subtitle</string>
    <string name="video_hint_subtitle_state_other">Others</string>
    <string name="video_toast_invalid_subtile">Invalid subtitles.</string>
    <string name="video_toast_no_exist_subtiles">Sorry, the subtitle files cannot be found.</string>
    <string name="video_menu_sound">Audio Track</string>
    <string name="video_menu_sund_lang">Audio</string>
    <string name="video_menu_video_full">Full Screen</string>
    <string name="video_menu_video_original">Initial Size</string>
    <string name="video_menu_video_scale">Aspect Ratio</string>
    <string name="video_menu_video_display">Screen Display</string>
    <string name="video_playlist_all_left">All Videos(</string>
    <string name="video_playlist_all_right">)</string>
    <string name="create_menu_fail">Insufficient memory. Cannot display the menu page.</string>
    <string name="video_seekbar_duration_filter"> / </string>
    <string name="mediaInfoUnknown">unknown</string>
    <string name="subintitle">Embedded Subtitle</string>
    <string name="subextitle">Attached Subtitle</string>
    <string name="time_seek">Seek</string>
    <string name="play_settings">Settings</string>
    <string name="video_menu_channel_mode">Sound Channel</string>
    <string name="video_menu_channel_mode_surround">Surround</string>
    <string name="video_menu_channel_mode_single">Mono Sound</string>
    <string name="video_menu_channel_mode_stereo">Stereo</string>
    <string name="video_menu_channel_mode_leftchannelonly">Left Stereo</string>
    <string name="video_menu_channel_mode_rightchannelonly">Right Stereo</string>
    <string name="video_subtitle_setting_select_tip">Select Other Subtitles</string>
    <string name="video_subtitle_finish_right_tip">to finish the selection.</string>
    <string name="video_subtitle_finish_left_tip">Press</string>
    <string name="text_video_time_seek_time_default">0</string>
    <string name="text_video_time_seek_time_divider">:</string>
    <string name="image">Photo</string>
    <string name="pictureplayer_showdetail">Show Details</string>
    <string name="pictureplayer_hidedetail">Hide Details</string>
    <string name="image_cannot_pre">This is the first image.</string>
    <string name="image_cannot_next">This is the last image.</string>
    <string name="image_start_autoplay">The automatic play is enabled.</string>
    <string name="image_stop_autoplay">The automatic play is disabled.</string>
    <string name="image_cannt_display">This image cannot be played.</string>
    <string name="image_rotated_failed">Failed to rotate the image.</string>
    <string name="play_mode_image">Play Mode</string>
    <string name="image_delete_success">Image deleted successfully.</string>
    <string name="image_delete_failure">Failed to delete the image.</string>
    <string name="image_sorteup_success">Image added to favorites successfully.</string>
    <string name="image_sorteup_failure">Failed to add the image to favorites.</string>
    <string name="start_background_music">The background music is enabled.</string>
    <string name="stop_background_music">The background music is disabled.</string>
    <string name="no_exite_background_music">No background music is available.</string>
    <string name="playinterval1">Play Interval: 3 seconds</string>
    <string name="playinterval2">Play Interval: 8 seconds</string>
    <string name="playinterval3">Play Interval: 5 seconds</string>
    <string name="store_up">collect</string>
    <string name="blind_window">Blinds</string>
    <string name="no_album">No photos found. The system photos will be played.</string>
    <string name="search_no_data">No such files found.</string>
    <string name="search_try_again">Search Again</string>
    <string name="exit">Exit</string>
    <string name="unknow_name">Anonymous</string>
    <string name="server_address">Server Address</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_samba_device">Add Samba device</string>
    <string name="ex_samba_address">example://10.10.10.163/gf</string>
    <string name="list_setting_select_tip">Select Other Subtitles</string>
    <string name="list_finish_right_tip">to finish the selection</string>
    <string name="list_finish_left_tip">please press</string>
    <string name="op_progress">Opration progress</string>
    <string name="num_one">1</string>
    <string name="stop">Stop</string>
    <string name="confirm_delete">Confirm delete?</string>
    <string name="delete_smb_nfs">Delete SMB or NFS devices</string>
    <string name="currdevice_no_images">Local device not contain images</string>
    <string name="back_music">Background music</string>
    <string name="local_no_music">Local device not contain musics</string>
</resources>