<?xml version="1.0" encoding="utf-8"?>
<!-- 添加NFS设备对话框 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/common_grey_dailog_background" 
    android:paddingLeft="20dp"
    android:paddingRight="20dp">
    
     <TextView 
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/confirm_delete"/>
    


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" 
            android:layout_margin="10dp"
            android:background="@drawable/common_btn_background"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" 
            android:layout_margin="10dp"
            android:background="@drawable/common_btn_background"/>
    </LinearLayout>

</LinearLayout>