<?xml version="1.0" encoding="utf-8"?>
<!-- 操作进度对话框 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_grey_dailog_background"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/op_progress"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="10dp">

        <ProgressBar
            android:id="@+id/progress_loading"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:max="100"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_progress_num"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:text="@string/num_one"
            android:textColor="@android:color/white"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/common_btn_background"
            android:text="@string/stop"/>
    </LinearLayout>

</LinearLayout>