<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_music_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/menu_list_setting_bg_paddingtop"
    android:paddingLeft="@dimen/menu_list_setting_bg_paddingleft"
    android:paddingRight="@dimen/menu_list_setting_bg_paddingleft"
    android:paddingTop="@dimen/menu_list_setting_bg_paddingtop" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_list_setting_title_height"
        android:layout_weight="0"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/iv_list_setting_logo"
            android:layout_width="@dimen/menu_list_setting_logo_width"
            android:layout_height="@dimen/menu_list_setting_logo_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/menu_list_setting_title_margin"
            android:src="@drawable/list_setting_title_logo" />

        <TextView
            android:id="@+id/tv_list_finish_right"
            style="@style/ListSettingTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/menu_list_setting_title_margin"
            android:text="@string/list_finish_right_tip" />

        <TextView
            android:id="@+id/tv_select_tip"
            style="@style/ListSettingTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/menu_list_setting_select_tip_margin"
            android:layout_toRightOf="@+id/iv_list_setting_logo"
            android:text="@string/list_setting_select_tip" />

        <ImageView
            android:id="@+id/iv_list_setting_back"
            android:layout_width="@dimen/menu_list_setting_back_width"
            android:layout_height="@dimen/menu_list_setting_back_height"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tv_list_finish_right"
            android:src="@drawable/list_setting_back" />

        <TextView
            style="@style/ListSettingTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/iv_list_setting_back"
            android:text="@string/list_finish_left_tip" />
    </RelativeLayout>

    <TextView
        android:id="@+id/iv_no_album"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10px"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/no_album"
        android:textColor="#818b9a"
        android:textSize="28px"
        android:visibility="gone" />

    <GridView
        android:id="@+id/gv_list_folder_select"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10px"
        android:layout_weight="1"
        android:listSelector="@android:color/transparent"
        android:numColumns="4" />

</LinearLayout>